Add Consumables Routes
