# src/routes/v1/routesV1.ts
@@ -1,11 +1,13 @@
 import { Router } from "express";
 import { usersRouter } from "./users/users-route";
+import { consumablesRouter } from "./consumables/consumables-route";
 import { recommendationsRouter } from "./recommendations/recommendations-route";
 import { brunchsRouter } from "./brunchs/brunchs-route";
 
 export const v1Routes = Router();
 
 v1Routes.use("/users", usersRouter);
+v1Routes.use("/consumables", consumablesRouter);
 v1Routes.use("/recommendations", recommendationsRouter);
 v1Routes.use("/brunchs", brunchsRouter);
 
